# PyAmore

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
Src/: PyAmoreTransform.cpp  PyAmoreTransform.ixx
Src/Amore/: Transform.Builtins.cpp  Transform.cpp  Transform.ixx
Src/Amore/Code/: Code.Unpack.cpp  Code.Unpack.ixx  Code.ixx
Src/Amore/Encryption/: Encryption.SymmetricSXOR.ixx  Encryption.ixx
Src/Core/: Core.ixx  Hook.h  Hook.ixx  Log.ixx  Types.ixx
Src/Platform/: Platform.Unix.cpp  Platform.ixx
